# django_carlog

./: .dockerignore  .env.example  .env.production.example  .gitignore  .isort.cfg  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  README.md  TODO.md  ci_e2e_test.sh  ci_test.sh  copyToRemoteDb.sh  createVirtualEnv.sh  docker-compose.yml  fabfile.py  getTripsByYear.sql  loadFromRemoteDb.sh  loadRemoteDb.sh  manage.py  migrate.py  new_worktree.sh  pyproject.toml  render.yaml  requirements.txt  run-local-docker.sh  setlocal.sh  setproduction.sh
.claude/: settings.json  settings.local.json
.devcontainer/: devcontainer.json
.github/: copilot-instructions.md
.github/workflows/: ci.yml
carlog/: urls.py
carlog/settings/: base.py
django_carlog/: urls.py  wsgi.py
django_carlog/settings/: base.py  docker.py  local.py  production.py  test.py
docker/: deploy.sh  rollback.sh
e2e/: __init__.py  conftest.py  test_admin.py  test_api.py
templates/: base.html
templates/account/: login.html  logout.html
templates/socialaccount/snippets/: provider_list.html
templates/trips/: car_confirm_delete.html  car_form.html  car_list.html  cra_report.html  dashboard.html  trip_confirm_delete.html  trip_form.html  trip_list.html
trips/: admin.py  context_processors.py  forms.py  models.py  serializers.py  urls.py  views.py
trips/migrations/: 0001_initial.py  0001_squashed_0007_auto_20170321_2241.py  0002_auto_20150207_0440.py  0002_auto_20171205_2030.py  0003_alter_car_id_alter_odometer_id_alter_trip_id.py  0003_odometer_km.py  0004_auto_20150207_0447.py  0005_remove_car_license_plate.py  0006_auto_20170307_0642.py  0007_auto_20170321_2241.py
trips/tests/: __init__.py  test_admin.py  test_api.py  test_models.py  test_serializers.py  test_views.py
