[project]
name = "django-carlog"
version = "2.0.0"
description = "Car trip tracking REST API"
requires-python = ">=3.12"
dependencies = [
    "Django",
    "mysqlclient",
    "psycopg2-binary",
    "dj-database-url",
    "django-extensions",
    "django-model-utils",
    "django-environ",
    "djangorestframework",
    "django-filter",
    "django-allauth",
    "PyJWT",
    "cryptography",
    "gunicorn",
    "whitenoise",
]

[project.optional-dependencies]
dev = [
    "ipython",
    "django-debug-toolbar",
    "pytest",
    "pytest-django",
    "pytest-cov",
    "pytest-playwright",
    "ruff",
    "mypy",
    "django-stubs",
    "pre-commit",
]

[tool.ruff]
target-version = "py312"
line-length = 120
exclude = [
    ".git",
    ".ruff_cache",
    ".venv",
    "venv",
    "env",
    "migrations",
    "__pycache__",
]

[tool.ruff.lint]
select = [
    # Core Python
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes - undefined names, unused imports
    "I",      # isort - import sorting
    "N",      # pep8-naming - naming conventions
    "UP",     # pyupgrade - upgrade syntax for newer Python

    # Code Quality
    "B",      # flake8-bugbear - common bugs and design problems
    "C4",     # flake8-comprehensions - better list/dict comprehensions
    "C90",    # mccabe - complexity checker
    "PIE",    # flake8-pie - misc lints
    "SIM",    # flake8-simplify - simplify code
    "PERF",   # Perflint - performance anti-patterns
    "FURB",   # refurb - modernize code
    "RUF",    # Ruff-specific rules

    # Security
    "S",      # flake8-bandit - security issues
    "T10",    # flake8-debugger - no debugger statements

    # Django-specific
    "DJ",     # flake8-django - Django best practices

    # Type Checking
    "TCH",    # flake8-type-checking - type checking imports
    "PYI",    # flake8-pyi - type stub files
    "ANN",    # flake8-annotations - type annotations

    # Testing
    "PT",     # flake8-pytest-style - pytest best practices

    # Documentation
    "D",      # pydocstyle - docstring conventions

    # Error Handling
    "TRY",    # tryceratops - exception handling
    "EM",     # flake8-errmsg - exception messages
    "RSE",    # flake8-raise - raise statements

    # Imports
    "TID",    # flake8-tidy-imports - import hygiene
    "ICN",    # flake8-import-conventions - import aliases

    # Strings
    "Q",      # flake8-quotes - quote consistency
    "ISC",    # flake8-implicit-str-concat - string concatenation
    "FLY",    # flynt - f-string conversion

    # Code Cleanliness
    "A",      # flake8-builtins - no shadowing builtins
    "COM",    # flake8-commas - trailing commas
    "ERA",    # eradicate - commented-out code
    "ARG",    # flake8-unused-arguments - unused args
    "PTH",    # flake8-use-pathlib - use pathlib
    "SLF",    # flake8-self - private member access
    "RET",    # flake8-return - return statements
    "G",      # flake8-logging-format - logging format
    "LOG",    # flake8-logging - logging best practices
    "INP",    # flake8-no-pep420 - require __init__.py
    "EXE",    # flake8-executable - shebang checks
    "T20",    # flake8-print - no print statements

    # Date/Time
    "DTZ",    # flake8-datetimez - timezone-aware datetimes

    # Pylint
    "PL",     # Pylint - comprehensive linting
    "PLC",    # Pylint conventions
    "PLE",    # Pylint errors
    "PLR",    # Pylint refactor suggestions
    "PLW",    # Pylint warnings

    # Async
    "ASYNC",  # flake8-async - async best practices

    # Numpy/Pandas (if used)
    "NPY",    # NumPy-specific rules
    "PD",     # pandas-vet - pandas best practices

    # Airflow (included for completeness)
    "AIR",    # Airflow rules
]

ignore = [
    # Formatting (handled by ruff format)
    "E501",   # line too long
    "W191",   # indentation contains tabs
    "COM812", # trailing comma missing (conflicts with formatter)
    "ISC001", # implicit string concat (conflicts with formatter)

    # Testing
    "S101",   # assert used (needed for pytest)

    # Django-specific false positives
    "RUF012", # mutable class attributes (Django Meta classes)
    "DTZ011", # date.today() (Django timezone handling)
    "ARG001", # unused function argument (Django views/signals)
    "ARG002", # unused method argument (Django views/methods)

    # Flexibility
    "PLR2004", # magic value comparison (acceptable in tests)
    "TRY003", # long exception message
    "EM101",  # string literal in exception
    "EM102",  # f-string in exception
    "RET504", # unnecessary variable before return
    "SIM108", # ternary operator (sometimes less readable)

    # Security false positives
    "S105",   # hardcoded password (config patterns)
    "S106",   # hardcoded password (config patterns)
    "S107",   # hardcoded password (config patterns)
    "S311",   # random not for crypto (acceptable for non-crypto uses)

    # Documentation (enable gradually)
    "D100",   # missing docstring in public module
    "D101",   # missing docstring in public class
    "D102",   # missing docstring in public method
    "D103",   # missing docstring in public function
    "D104",   # missing docstring in public package
    "D105",   # missing docstring in magic method
    "D106",   # missing docstring in public nested class
    "D107",   # missing docstring in __init__
    "D200",   # one-line docstring should fit on one line
    "D203",   # 1 blank line required before class docstring (conflicts with D211)
    "D212",   # multi-line docstring summary should start at first line (conflicts with D213)
    "D401",   # first line should be in imperative mood
    "D415",   # first line should end with punctuation

    # Type annotations (enable gradually)
    "ANN001", # missing type annotation for function argument
    "ANN002", # missing type annotation for *args
    "ANN003", # missing type annotation for **kwargs
    "ANN201", # missing return type annotation for public function
    "ANN202", # missing return type annotation for private function
    "ANN204", # missing return type annotation for special method
    "ANN206", # missing return type annotation for classmethod
]

[tool.ruff.lint.per-file-ignores]
# Test files - allow assertions, magic values, unused args
"tests/*" = ["S101", "PLR2004", "ARG", "ANN", "D"]
"e2e/*" = ["S101", "PLR2004", "ARG", "ANN", "D"]
"**/tests/*" = ["S101", "PLR2004", "ARG", "ANN", "D"]
"conftest.py" = ["ARG", "ANN", "D"]

# Settings files - star imports are Django convention
"settings/*" = ["F405", "F403"]
"**/settings/*.py" = ["F405", "F403"]

# Scripts and tools
"manage.py" = ["INP001"]

# Migrations - auto-generated, minimal linting
"**/migrations/*.py" = ["D", "ANN", "ARG", "N999", "E501"]

[tool.ruff.lint.isort]
known-first-party = ["trips", "django_carlog"]
force-single-line = false
lines-after-imports = 2
section-order = ["future", "standard-library", "django", "third-party", "first-party", "local-folder"]

[tool.ruff.lint.isort.sections]
django = ["django"]

[tool.ruff.lint.flake8-pytest-style]
fixture-parentheses = false
parametrize-names-type = "tuple"
parametrize-values-type = "list"

[tool.ruff.lint.flake8-quotes]
inline-quotes = "double"
docstring-quotes = "double"

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "parents"

[tool.ruff.lint.flake8-type-checking]
strict = true

[tool.ruff.lint.mccabe]
max-complexity = 12

[tool.ruff.lint.pylint]
max-args = 8
max-branches = 15
max-returns = 8
max-statements = 60

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-format = true

[tool.mypy]
python_version = "3.12"
plugins = ["mypy_django_plugin.main"]
strict = false
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
exclude = [
    "migrations/",
    "tests/",
    "e2e/",
]

[tool.django-stubs]
django_settings_module = "django_carlog.settings.base"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "django_carlog.settings.test"
python_files = ["test_*.py", "*_test.py"]
addopts = "-v --tb=short"
# Disable pytest-base-url URL verification to avoid scope mismatch with Django's live_server
base_url = ""

[tool.coverage.run]
source = ["trips"]
omit = ["*/migrations/*", "*/tests/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
]
